# real-estate-investment-analysis-with-claude-code

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
projects/part06_tracking/: main.py  sheets.py  tracker.py  watchlist.py
projects/part06_tracking/data/: watchlist.json
projects/part07_roi/: calculator.py  main.py  sheets.py  targets.py
projects/part07_roi/data/: targets.json
projects/part08_kb_dashboard/dashboard/: app.py  charts.py  choropleth.py  constants.py  db.py  geo.py  preprocessing.py
projects/part08_kb_dashboard/notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_chart_prototype.ipynb
projects/part09_trade_map/dashboard/: app.py  constants.py  db.py  map_builder.py  pivot.py  preprocessing.py
projects/part09_trade_map/notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_map_prototype.ipynb
projects/part10_price_volume/dashboard/: __init__.py  app.py  charts.py  constants.py  db.py  preprocessing.py
projects/part10_price_volume/notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_chart_prototype.ipynb
src/: config.py
src/collectors/: KB통계.py  경계지도.py  공동주택.py  실거래가.py  좌표.py
src/preprocessing/: __init__.py  trade.py
src/utils/: __init__.py  address.py
tests/: test_address.py  test_notebook_inventory.py  test_preprocessing.py  test_root_main.py
tests/part08/: test_kb_preprocessing.py
tests/part09/: test_address_sql.py  test_coordinate_key.py  test_pivot.py  test_preprocessing.py
tests/part10/: test_price_volume_preprocessing.py
