[project]
name = "vibecoding-apt-investment"
version = "0.1.0"
description = "Apartment investment analysis workspace with data collectors, DuckDB preprocessing, and mini projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "branca>=0.8.2",
    "duckdb>=1.4.4",
    "folium>=0.20.0",
    "gspread>=6.2.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.6.0",
    "publicdatareader>=1.1.1.post2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "streamlit-folium>=0.26.2",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
